@@ -43,6 +43,8 @@ def show(position, panel, link, cursor):
     
     # selection? -> Copy
     if panel.widget().view.surface().hasSelection():
+        if panel.widget().view.surface().selectedText():
+            m.addAction(panel.actionCollection.music_copy_text)
         m.addAction(panel.actionCollection.music_copy_image)
     
     if cursor:
